force-app/main/default/objects/PromptAnswer__c/PromptAnswer__c.object-meta.xml
<CustomObject>
    <description>A Response or Answer to a Prompt</description>
    <label>Prompt Answer</label>
    <nameField>
        <label>Prompt Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompt Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>