force-app/main/default/objects/PromptAnswer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>The Response from the Prompt</description>
    <inlineHelpText>The Response from the Prompt</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>