force-app/main/default/objects/PromptAnswer__c/fields/ParameterValues__c.field-meta.xml
<CustomField>
    <fullName>ParameterValues__c</fullName>
    <description>JSON body of Parameter Values that generated this Response</description>
    <inlineHelpText>JSON body of Parameter Values that generated this Response</inlineHelpText>
    <label>Parameter Values</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>