force-app/main/default/objects/PromptAnswer__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Prompt from which this Response was generated</description>
    <inlineHelpText>The Prompt from which this Response was generated</inlineHelpText>
    <label>Prompt</label>
    <referenceTo>Prompt__c</referenceTo>
    <relationshipName>PromptResponses</relationshipName>
    <type>Lookup</type>
</CustomField>