force-app/main/default/objects/PromptAnswer__c/fields/PromptUsed__c.field-meta.xml
<CustomField>
    <fullName>PromptUsed__c</fullName>
    <description>The text of the Prompt message used to generate the Answer text</description>
    <inlineHelpText>The text of the Prompt message used to generate the Answer text</inlineHelpText>
    <label>Prompt Used</label>
    <length>8196</length>
    <type>LongTextArea</type>
</CustomField>