force-app/main/default/objects/PromptAnswer__c/fields/SystemUsed__c.field-meta.xml
<CustomField>
    <fullName>SystemUsed__c</fullName>
    <description>The System Message used in this prompt that generated the Answer</description>
    <inlineHelpText>The System Message used in this prompt that generated the Answer</inlineHelpText>
    <label>System Used</label>
    <length>8196</length>
    <type>LongTextArea</type>
</CustomField>