force-app/main/default/objects/PromptAnswer__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>&quot;Creativity Temperature&quot; of the generator</description>
    <inlineHelpText>&quot;Creativity Temperature&quot; of the generator</inlineHelpText>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>