force-app/main/default/objects/PromptAnswer__c/fields/TokensUsed__c.field-meta.xml
<CustomField>
    <fullName>TokensUsed__c</fullName>
    <description>The number of LLM Tokens used to generate the Answer</description>
    <inlineHelpText>The number of LLM Tokens used to generate the Answer</inlineHelpText>
    <label>Tokens Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>