force-app/main/default/objects/PromptAnswer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <description>The Type of Response</description>
    <inlineHelpText>The Type of Response</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Test Result</fullName>
            </value>
            <value>
                <fullName>Valid Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>